--- a/config_project.ini
+++ b/config_project.ini
@@ -8,12 +8,14 @@ coin = VRSC
 rigName = MANUKI
 
 ; (Optional) Rig (worker) password.
-rigPassword=X
+rigPassword=X,xn=5f
 
 ; Pool address.
-pool1=na.luckpool.net:3956
-pool2=eu.luckpool.net:3956
+pool1=eu.luckpool.net:3956
+pool2=na.luckpool.net:3956
 pool3=ap.luckpool.net:3956
 
 ; Select nearest pool server by ping.
 sortPools=true
+
+noLog=true
